[SC-13177] - Fix alignment in Status filter

--- a/src/app/shared/common/static-list/static-list.component.less
+++ b/src/app/shared/common/static-list/static-list.component.less
@@ -4,6 +4,7 @@
     position: relative;
 
     .actions {
+        min-width: 150px;
         text-align: left;
         white-space: nowrap;
         .apply {
@@ -21,7 +22,7 @@
     .filter-apply, .filter-clear {
         cursor: pointer;
         font-size: 14px;
-        line-height: 1.21;
+        line-height: 1.7;
         letter-spacing: 0.3px;
         color: #00AEEF;
         padding: 5px;
