--- a/src/shared/common/source-contact-list/source-contact-list.component.less
+++ b/src/shared/common/source-contact-list/source-contact-list.component.less
@@ -5,6 +5,7 @@ div {
     }
     &[custom-title] {
         width: 140px;
+        line-height: 1.7;
         display: inline-block;
         text-align: left;
         font-size: 18px;
